<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <Button
            android:id="@+id/open_dialog_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_note"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/teal_700"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/ATechRed"
            android:text="@string/go_back"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />

    </LinearLayout>

    <Spinner
        android:id="@+id/user_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@android:drawable/btn_dropdown"
        android:dropDownVerticalOffset="45dp"
        android:padding="8dp"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/ATechRed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/indicator"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/ATechRed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notes"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/ATechRed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/document"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/notes_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:background="@drawable/rounded_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_marginTop="8dp">

        <!-- Back Arrow -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow_icon"
            android:contentDescription="@string/back_arrow"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <!-- Page Count Text -->
        <TextView
            android:id="@+id/pageCountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical" />

        <!-- Forward Arrow -->
        <ImageView
            android:id="@+id/forwardArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/forward_arrow_icon"
            android:contentDescription="@string/forward_arrow"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</LinearLayout>
